--- a/aboutme.html
+++ b/aboutme.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css"/>
+    <title>My Personal Web</title>
 </head>
 <body>
     <header>
         <div class="jumbotron">
-            <h1>ABOUT ME</h1>
+            <h1>My Personal Website</h1>
         </div>
         <div class="navbar">
             <nav>
@@ -22,7 +23,19 @@
     </header>
     <main>
         <div class="home" id="home">
-
+            <h1 class="massivetext">WELCOME</h1>
+            <div class="profilecontainer">
+                <div class="desc">
+                    <p>This is steven(author)'s personal web that are use for college project.
+                    </p>
+                </div>
+                <figure>
+                    <aside class="profilepic">
+                        <img src="img/IMG_20230407_211035_340.jpg" alt="Steven Silalahi" width="200px" height="200px" class="profilepic">
+                    </aside>
+                    <figcaption>Steven Silalahi</figcaption>
+                    </figure>
+            </div>
         </div>
     </main>
 </body>
