--- a/aboutme.html
+++ b/aboutme.html
@@ -31,10 +31,40 @@
                 </div>
                 <figure>
                     <aside class="profilepic">
-                        <img src="img/IMG_20230407_211035_340.jpg" alt="Steven Silalahi" width="200px" height="200px" class="profilepic">
+                        <img src="img\paspoto.jpeg" alt="Steven Silalahi" width="200px" height="300px" class="profilepic">
                     </aside>
                     <figcaption>Steven Silalahi</figcaption>
                     </figure>
+            </div>
+        </div>
+        <div class="aboutme" id="aboutme">
+            <h1>ABOUT ME</h1>
+            <div class="aboutcontent" ></div>
+                <article>
+                <p>Steven Silalahi was a student of Universitas Sumatera Utara. He take major of informatic engineering and he also have passion in the world of machine learning.
+            </div>
+            <div class="history">
+                <div class="education">
+                    <table>
+                        <tr>
+                            <td>YEAR</td>
+                            <td>EDUCATION</td>
+                        </tr>
+                        <tr>
+                            <td>2023 - Present</td>
+                            <td>Universitas Sumatera Utara</td>
+                        </tr>
+                        <tr>
+                            <td>2020 - 2023</td>
+                            <td>SMA Santo Thomas 2 Medan</td>
+                        </tr>
+                        <tr>
+                            <td>2017 - 2020</td>
+                            <td>Sekolah Lentera Harapan Medan</td>
+                        </tr>
+
+                    </table>
+                </div>
             </div>
         </div>
     </main>
