add contact info

--- a/aboutme.html
+++ b/aboutme.html
@@ -62,10 +62,24 @@
                             <td>2017 - 2020</td>
                             <td>Sekolah Lentera Harapan Medan</td>
                         </tr>
-
+                        
+                        
                     </table>
+                    <h3>EXPERIENCE</h3>
+                        <ol>
+                            <li>Make a PvP game with python programming language</li>
+                            <li>Create a machine learning model that are capable to differentiate an image</li>
+                        </ol>
                 </div>
             </div>
+        </div>
+        <div class="contact" id="contact">
+            <h1>CONTACT ME</h1>
+            <ul>
+                <li>Phone number +62 812 617x xxxx</li>
+                <li>email = stevendwi1453@gmail.com</li>
+                <li>linkedln = linkedin.com/in/steven-silalahi</li>
+            </ul>
         </div>
     </main>
 </body>
