--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,19 @@
     <title>Contact</title>
 </head>
 <body>
-    
+    <header>
+        <div class="jumbotron">
+            <h1>My Personal Website</h1>
+        </div>
+        <div class="navbar">
+            <nav>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
