--- a/home.html
+++ b/home.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="style\style2.css">
 </head>
 <body>
-    
+    <header>
+        <div class="jumbotron">
+            <h1>MY PERSONAL WEBSITE</h1>
+        </div>
+        <div class="navbar">
+            <nav>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="landingpage">
+            <h1>WELCOME TO MY PAGE</h1>
+        </div>
+    </main>
 </body>
 </html>
