home page finish

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="jumbotron">
-            <h1>MY PERSONAL WEBSITE</h1>
+            <h1>Steven</h1>
         </div>
         <div class="navbar">
             <nav>
@@ -23,7 +23,11 @@
     </header>
     <main>
         <div class="landingpage">
-            <h1>WELCOME TO MY PAGE</h1>
+            <h1>Hello, Welcome to my website</h1>
+        </div>
+        <div class="container">
+            <div class="gradient"></div>
+            <img src="img\computer.jpg">
         </div>
     </main>
 </body>
