finish contact page

--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style\style3.css">
     <title>Contact</title>
 </head>
 <body>
     <header>
         <div class="jumbotron">
-            <h1>My Personal Website</h1>
+            <h1>Steven</h1>
         </div>
         <div class="navbar">
             <nav>
@@ -20,5 +21,25 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="contactpage">
+            <h1>Social Media</h1>
+            <ul class="social">
+                <li><a href="https://www.linkedin.com/in/steven-silalahi/" target="_blank">Linkedin</a></li>
+                <li><a href="https://www.instagram.com/stevendwi_silalahi?igsh=MTNnNGFkb2ZuZm9waA==" target="_blank">Instagram</a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100076916442243&mibextid=ZbWKwL" target="_blank">Facebook</a></li>
+                <li><a href="https://github.com/steven-silalahi" target="_blank">Github</a></li>
+            </ul>
+            <h1 id="contactme">Contact me</h1>
+            <ul class="contact">
+                <li>+62 812 61xx xxxx (phone number)</li>
+                <li>stevendwi1453@gmail.com (email)</li>
+            </ul>
+        </div>
+        <div class="container">
+            <div class="gradient"></div>
+            <img src="img\computer.jpg">
+        </div>
+    </main>
 </body>
 </html>
