finish aboutme page

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="jumbotron">
-            <h1>My Personal Website</h1>
+            <h1>Steven</h1>
         </div>
         <div class="navbar">
             <nav>
@@ -22,29 +22,9 @@
         </div>
     </header>
     <main>
-        <div class="home" id="home">
-            <h1 class="massivetext">WELCOME</h1>
-            <div class="profilecontainer">
-                <div class="desc">
-                    <p>This is steven(author)'s personal web that are use for college project.
-                    </p>
-                </div>
-                <figure>
-                    <aside class="profilepic">
-                        <img src="img\paspoto.jpeg" alt="Steven Silalahi" width="200px" height="300px" class="profilepic">
-                    </aside>
-                    <figcaption>Steven Silalahi</figcaption>
-                    </figure>
-            </div>
-        </div>
-        <div class="aboutme" id="aboutme">
-            <h1>ABOUT ME</h1>
-            <div class="aboutcontent" ></div>
-                <article>
-                <p>Steven Silalahi was a student of Universitas Sumatera Utara. He take major of informatic engineering and he also have passion in the world of machine learning.
-            </div>
-            <div class="history">
+            <div class="resume">
                 <div class="education">
+                    <h1>EDUCATION</h1>
                     <table>
                         <tr>
                             <td>YEAR</td>
@@ -65,22 +45,26 @@
                         
                         
                     </table>
-                    <h3>EXPERIENCE</h3>
-                        <ol>
-                            <li>Make a PvP game with python programming language</li>
-                            <li>Create a machine learning model that are capable to differentiate an image</li>
-                        </ol>
+                    <div class="experience">
+                        <h1 >EXPERIENCE</h1>
+                            <ol>
+                                <li>Make a PvP game with python programming language</li>
+                                <ul>
+                                    <li>Character design</li>
+                                    <li>Programmer</li>
+                                    <li>Background design</li>
+                                </ul>
+                                <li>Create a machine learning model that are capable to differentiate an image</li>
+                                <li>Member of GDSC (Google Developer Student Club)</li>
+                                <li>Laboratorium assistance</li>
+                            </ol>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="contact" id="contact">
-            <h1>CONTACT ME</h1>
-            <ul>
-                <li>Phone number +62 812 617x xxxx</li>
-                <li>email = stevendwi1453@gmail.com</li>
-                <li>linkedln = linkedin.com/in/steven-silalahi</li>
-            </ul>
-        </div>
+            <div class="container">
+                <div class="gradient"></div>
+                <img src="img\paspoto.jpeg">
+            </div>
     </main>
 </body>
 </html>
