change nav hover

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="landingpage">
-            <h1>Hello, Welcome to my website</h1>
+            <h1>Hello, <span id="welcome">Welcome</span> to my <span id="website">website</span></h1>
         </div>
         <div class="container">
             <div class="gradient"></div>
